update add logo and clear file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <body>
     <div class="container">
+      <img src="images/logo.png" alt="Logo" class="logo" />
       <h1>شهر مورد نظر خود را انتخاب کنید</h1>
       <p>تا فروشگاه‌های شهر خود را مشاهده کنید</p>
       <div class="search-box">
